--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
         <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-auth.js"></script>
         <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-firestore.js"></script>
-
+        
         <style>
             body {
-                background: blue;
+                background: red;
             }
         </style>
     </head>
