--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         
         <style>
             body {
-                background: red;
+                background: rgb(131, 60, 60);
             }
         </style>
     </head>
