--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         </style>
     </head>
     <body>
-        Hello there!
+        Hello there! From Dana!
 
         <script>
             var firebaseConfig = {
