--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
         
         <style>
             body {
-                background: rgb(131, 60, 60);
+                background: rgb(212, 58, 58);
             }
         </style>
     </head>
     <body>
-        Hello there!
+        Hello there! Huh?!
 
         <script>
             var firebaseConfig = {
