changed firebase identification codes (copy and paste from firebase site)

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-auth.js"></script>
         <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-firestore.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-analytics.js"></script>
         
         <style>
             body {
@@ -21,12 +22,12 @@
                 projectId: "javawebsite-ab223",
                 storageBucket: "javawebsite-ab223.appspot.com",
                 messagingSenderId: "372498914074",
-                appId: "1:372498914074:web:b225141d76115b78e0eaa3",
-                measurementId: "G-HSW2HJBJGE"
+                appId: "1:372498914074:web:b4687c7c7dbae9b9e0eaa3",
+                measurementId: "G-SJEERR0S09"
             };
             // Initialize Firebase
             firebase.initializeApp(firebaseConfig);
-
+            firebase.analytics();
 
         </script>
     </body>
