--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         </style>
     </head>
     <body>
-        Hello there! From Dana and An!
+        Hello there! From Dana and An! Hello to you too!
 
         <script>
             var firebaseConfig = {
