--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         </style>
     </head>
     <body>
+        <canvas width= "400" height = "400" style="border:2px solid black"></canvas>
         Hello there! Im bobada
 
         <script>
