Fix merge conflict.

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
         
         <style>
             body {
-                background: rgb(131, 60, 60);
+                background: rgb(212, 58, 58);
             }
         </style>
     </head>
     <body>
+        <hfer
         <canvas width= "400" height = "400" style="border:2px solid black"></canvas>
-        Hello there! Im bobada
+        Hello there! Huh?! Im hungry all the time.
 
         <script>
             var firebaseConfig = {
