--- a/index.html
+++ b/index.html
@@ -13,9 +13,16 @@
     </head>
     <body>
 
-        <canvas width= "400" height = "400" style="border:2px solid black" ></canvas>
-        <img src = "https://pngimg.com/uploads/ghost/ghost_PNG81.png" width="20px" height="20px">
-       
+        <canvas id="PlayZone" width= "600" height = "600" style="border:2px solid black" ></canvas>
+        <img id= "ghost" src = "https://pngimg.com/uploads/ghost/ghost_PNG81.png" width="20px" height="20px" alt="Seeker">
+
+       <script>window.onload = function() {
+        var c = document.getElementById("PlayZone");
+        var ctx = c.getContext("2d");
+        var img = document.getElementById("ghost");
+        ctx.drawImage(img, 180, 180, 150, 180);
+      }
+      </script>
        
 
         <script>
