--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
             body {
                 background: rgb(250, 249, 249);
             }
-            .hidden {
-                display: none;
-            }
         </style>
     </head>
     <body>
@@ -91,7 +88,7 @@
                     position: position,
                 })
 
-                document.getElementById('play-page').className = 'hidden';
+                document.getElementById('play-page').style.display = 'none';
             }
 
             
