--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             var ctx = c.getContext("2d");
             var img = document.getElementById("ghost");
             var img = document.getElementById("hunter");
-
+                //This code is for the ghost which is label as var imgGhost
             var lastX = 180;
             var lastY = 180;
             var width = 40;
