--- a/index.html
+++ b/index.html
@@ -62,13 +62,19 @@
                 } else {
                     var img = document.getElementById("hunter");
                 }
-
                 var lastX = 180;
                 var lastY = 180;
                 var width = 40;
                 var height = 40;
 
-                ctx.drawImage(img, lastX, lastY, width, height);
+                ctx.drawImage(img, lastX, lastY, width, height
+                function getRandomPosition(ghost) {
+	                var x = document.body.offsetHeight-ghost.clientHeight;
+	                var y = document.body.offsetWidth-ghost.clientWidth;
+	                var randomX = Math.floor(Math.random()*x);
+	                var randomY = Math.floor(Math.random()*y);
+	                return [randomX,randomY];
+                }
                 //goes up 1
                 function moveUp(amount) {
                     ctx.clearRect(0, 0, c.width, c.height);
